# web-scraping-pipeline

./: README.md  app.py  cdk.json
lambda_code/publish_messages_to_sns_lambda/: handler.py  pyproject.toml
lambda_code/write_messages_to_redshift_lambda/: handler.py  pyproject.toml  requirements.txt
web_scraping_pipeline/: web_scraping_pipeline_stack.py
