[tool.poetry]
name = "write_messages_to_redshift_lambda"
version = "0.1.0"
description = ""
authors = ["Eugene"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.2"

[tool.poetry.dev-dependencies]
boto3 = "^1.26.32"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
